# My-Blog

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  generate_posts.py  notes.txt  pyproject.toml  sample_env_file.txt
blog/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_add_post_deleted_flag.py  0003_add_comment_deleted_edited.py
blog/static/blog/: style.css
blog/templates/blog/: about.html  archive_day.html  archive_index.html  archive_month.html  archive_year.html  base.html  detail.html  index.html  not_found.html  post_form.html  register.html
blog/templates/registration/: logged_out.html  login.html
django_project/: settings.py  urls.py
