[project]
name = "personal-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
    "django-debug-toolbar>=6.3.0",
    "django-environ>=0.14.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.0.0",
    "psycopg2-binary>=2.9.12",
    "ruff>=0.15.16",
]
